--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,7 @@ a:hover {
 .primary-text p {
   margin-top: 1rem;
 }
+
 .comment {
   width: 400px;
   height: 288px;
@@ -165,7 +166,7 @@ body {
   display: flex;
   align-content: center;
   justify-content: space-between;
-  width: 1200px;
+  max-width: 1200px;
   height: 90px;
   margin: auto;
 }
@@ -174,107 +175,103 @@ body {
   width: 140px;
   height: 50px;
 }
-#main-navbar .navbar div {
-  font-size: 0.9rem;
-}
-#main-navbar .navbar div .create-acc {
+#main-navbar .navbar nav {
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-#main-navbar .navbar div .create-acc li {
-  padding: 0.7rem 1rem 0;
-}
-#main-navbar .navbar div nav ul {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-#main-navbar .navbar div nav ul li {
-  list-style: none;
-  padding: 1rem;
-}
-#main-navbar .navbar div nav ul .photo-bk {
-  position: relative;
-  /* Nested dropdown show */
-}
-#main-navbar .navbar div nav ul .photo-bk .shadow-hider {
-  position: absolute;
-  top: -30px;
-  left: 0px;
-  width: 150px;
-  height: 30px;
-  background: #fff;
-  border: none;
-  z-index: 4;
-  box-shadow: none;
-  transition: transform 0.1s ease;
-  transform: translateY(15px);
-}
-#main-navbar .navbar div nav ul .photo-bk div {
-  position: absolute;
-  left: -1px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding: 1rem 1rem;
-  margin-top: 1rem;
-  background-color: #fff;
-  border: #ccc 1px solid;
-  border-radius: 5px;
-  box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.1);
-  visibility: hidden;
-  opacity: 0;
-  transition: transform 0.1s ease;
-  transform: translateY(-20px);
-}
-#main-navbar .navbar div nav ul .photo-bk div ul {
   flex-direction: column;
-  align-items: flex-start;
+  justify-content: space-evenly;
+  align-items: flex-end;
+  font-size: 0.95rem;
+}
+#main-navbar .navbar nav ul {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+#main-navbar .navbar nav .acc {
+  width: 400px;
+  height: 35px;
+}
+#main-navbar .navbar nav .acc li {
+  padding: 10px 0 0 20px;
+}
+#main-navbar .navbar nav .menu {
+  width: 800px;
+  height: 55px;
+}
+#main-navbar .navbar nav .menu > li {
+  padding: 13px 13px;
+}
+#main-navbar .navbar nav .menu .photo > li {
+  position: relative;
+  padding: 13px 13px;
+  position: relative;
+  display: flex;
+  align-content: center;
+  justify-content: space-between;
+}
+#main-navbar .navbar nav .menu .photo div {
+  visibility: hidden;
+  transition: height 0.1s ease;
+  display: flex;
+  align-content: flex-start;
   justify-content: flex-start;
-  border-right: #ccc 1px solid;
-  height: 240px;
+  height: 230px;
+  padding: 1.3rem 0;
+  position: absolute;
+  top: 115px;
+  background: #fff;
+  border: #ccc 1px solid;
+  box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.1);
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+  border-top-left-radius: none;
+  overflow: hidden;
 }
-#main-navbar .navbar div nav ul .photo-bk div ul:first-child {
-  padding-right: 1rem;
+#main-navbar .navbar nav .menu .photo div .menu-list {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 2rem;
+  padding: 0 1.5rem;
+  border-right: 1px #ddd solid;
 }
-#main-navbar .navbar div nav ul .photo-bk div ul:nth-child(2) {
-  padding: 0 1rem 0;
+#main-navbar .navbar nav .menu .photo div .one {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
-#main-navbar .navbar div nav ul .photo-bk div ul:last-child {
-  padding: 0 0 0 1rem;
+#main-navbar .navbar nav .menu .photo div .two {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+#main-navbar .navbar nav .menu .photo div .three {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
   border-right: none;
 }
-#main-navbar .navbar div nav ul .photo-bk div ul li {
-  padding: 0.5rem;
-  white-space: nowrap;
-}
-#main-navbar .navbar div nav ul .photo-bk div ul li a {
-  font-weight: 500;
-}
-#main-navbar .navbar div nav ul .photo-bk:hover {
-  cursor: pointer;
-  border: 1px #ccc solid;
-  background-color: #fff;
-  box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.1);
-  border-radius: 5px 5px 0 0;
+#main-navbar .navbar nav .menu .photo:hover > li {
+  background: #fff;
+  border: #ccc 1px solid;
   border-bottom: none;
-  padding-bottom: 3rem;
+  border-bottom-left-radius: none;
+  border-bottom-right-radius: none;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  z-index: 2;
 }
-#main-navbar .navbar div nav ul .photo-bk:hover .drp-dwn-lst {
-  transform: translateY(0);
-}
-#main-navbar .navbar div nav ul .photo-bk:hover div {
+#main-navbar .navbar nav .menu .photo:hover div {
   visibility: visible;
-  opacity: 1;
-  transform: translateY(5px);
+  height: 270px;
 }
 
 #showcase {
-  position: relative;
-  margin: 0;
+  margin-bottom: 50px;
   padding: 0;
   height: 500px;
   display: flex;
@@ -282,6 +279,7 @@ body {
   align-items: center;
 }
 #showcase .slider {
+  margin: auto;
   width: 1200px;
   height: 500px;
   overflow: hidden;
@@ -320,7 +318,7 @@ body {
 }
 #showcase .slider .slides .navigation-manual {
   position: absolute;
-  top: 500px;
+  top: 623px;
   width: 1200px;
   margin-top: -18px;
   display: flex;
@@ -333,10 +331,10 @@ body {
   text-align: center;
   padding: 5px 10px;
   background: white;
-  cursor: pointer;
 }
 #showcase .slider .slides .navigation-manual .manual-btn:hover {
   color: #b1b1b1;
+  cursor: pointer;
 }
 #showcase .slider .slides .navigation-manual .manual-btn:not(:last-child) {
   margin-right: 20px;
@@ -354,13 +352,13 @@ body {
 main #product {
   width: 1200px;
   margin: 0 auto;
-  height: 1050px;
+  height: 1000px;
 }
 main #product .container {
   position: relative;
 }
 main #product .container .head-text {
-  padding: 70px 0 70px;
+  padding: 10px 0 70px;
   text-align: center;
 }
 main #product .container .head-text .color-heading {
@@ -759,7 +757,7 @@ main #community .btn {
 main #ratings {
   width: 100vw;
   height: 240px;
-  margin: 0 0 60px;
+  margin: 0 0 50px;
 }
 main #ratings .manual-rating-slideshow {
   position: relative;
